--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -1,28 +1,12 @@
-<ion-side-menus>
-
-  <ion-pane ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button class="button-clear"><i class="icon ion-chevron-left"></i> Back</ion-nav-back-button>
-    </ion-nav-bar>
-    <ion-nav-view name="menuContent" animation="slide-left-right"></ion-nav-view>
-  </ion-pane>
-
-  <ion-side-menu side="left">
-    <header class="bar bar-header bar-stable">
-      <h1 class="title">Left</h1>
-    </header>
+<ion-view title="Menu" ng-controller="MenuCtrl as menu">
+    <ion-nav-buttons side="left">
+        <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+    </ion-nav-buttons>
     <ion-content class="has-header">
-      <ion-list>
-        <ion-item nav-clear menu-close href="#/app/search">
-          Search
-        </ion-item>
-        <ion-item nav-clear menu-close href="#/app/browse">
-          Browse
-        </ion-item>
-        <ion-item nav-clear menu-close href="#/app/playlists">
-          Playlists
-        </ion-item>
-      </ion-list>
+        <ion-list>
+            <ion-item ng-repeat="item in menu" href="#/app/menu/{{item.id}}">
+                {{item.title}}
+            </ion-item>
+        </ion-list>
     </ion-content>
-  </ion-side-menu>
-</ion-side-menus>
+</ion-view>
