Added list of stores

--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -16,6 +16,9 @@
         <ion-item nav-clear menu-close href="#/app/menu">
           Menu
         </ion-item>
+        <ion-item nav-clear menu-close href="#/app/stores">
+          Stores
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
