user is able to choose a pizza and its properties

--- a/app/templates/menu-pizzas.html
+++ b/app/templates/menu-pizzas.html
@@ -3,7 +3,7 @@
 </div>
 <div class="item item-button-right" ng-repeat="item in menu" href="#/app/menu/{{item.id}}">
     {{item.title}}
-    <button class="button" ng-click="add(item)">
+    <button class="button" ng-click="choose(item)">
         <i class="icon ion-plus-round"></i>
     </button>
 </div>
