pizza order modal added

--- a/app/templates/pizza-dough.html
+++ b/app/templates/pizza-dough.html
@@ -5,14 +5,14 @@
     <ion-content>
         <div class="list">
             <label class="item item-radio">
-                <input type="radio" name="size" value="individual" ng-click="dough.choose('molde')">
+                <input type="radio" name="size" value="individual" ng-click="dough.choose('al molde')">
                 <div class="item-content">
                     Al Molde
                 </div>
                 <i class="radio-icon ion-checkmark"></i>
             </label>
             <label class="item item-radio">
-                <input type="radio" name="size" value="chica" ng-click="dough.choose('piedra')">
+                <input type="radio" name="size" value="chica" ng-click="dough.choose('a la piedra')">
                 <div class="item-content">
                     A la Piedra
                 </div>
