--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -2,6 +2,9 @@
     <ion-nav-buttons side="left">
         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
     </ion-nav-buttons>
+    <ion-nav-buttons side="right">
+        <button menu-toggle="right" class="button button-clear button-positive">Mi Pedido</button>
+    </ion-nav-buttons>
     <ion-content class="has-header">
         <div class="list">
             <pizzas ng-model="menu"></pizzas>
