--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -22,4 +22,10 @@
       </ion-list>
     </ion-content>
   </ion-side-menu>
+
+  <!-- Right menu -->
+  <ion-side-menu side="right">
+      <cart></cart>
+  </ion-side-menu>
+
 </ion-side-menus>
