Gon - Adding products by store

--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -9,7 +9,7 @@
     </div>
     <ion-list>
         <ion-item nav-clear ng-repeat="item in cart">
-            {{item.title}}
+            {{item.desc}}
         </ion-item>
     </ion-list>
 </ion-content>
