--- a/app/templates/pizza-order.html
+++ b/app/templates/pizza-order.html
@@ -7,7 +7,7 @@
         <div class="list card">
             <div class="item item-avatar">
                 <img src="">
-                <h2>Pizza {{pizza.title}}</h2>
+                <h2>Pizza {{pizza.desc}}</h2>
                 <p>{{pizza.size}} {{pizza.dough}}</p>
             </div>
             <div class="item item-body">
