--- a/app/templates/menu-pizzas.html
+++ b/app/templates/menu-pizzas.html
@@ -1,8 +1,14 @@
 <div class="item item-divider">
     Pizzas
 </div>
+
 <div class="item item-button-right" ng-repeat="item in menu" href="#/app/menu/{{item.id}}">
-    {{item.title}}
+    <strong>{{item.desc}}</strong>
+
+    <br/>
+
+    {{ item.topp }}
+
     <button class="button" ng-click="choose(item)">
         <i class="icon ion-plus-round"></i>
     </button>
