--- a/app/templates/stores.html
+++ b/app/templates/stores.html
@@ -1,16 +1,24 @@
-<ion-view title="Menu" ng-controller="MenuCtrl as menu">
+<ion-view title="Menu">
+
     <ion-nav-buttons side="left">
         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
     </ion-nav-buttons>
+
     <ion-content class="has-header">
-        <ion-list>
-            <ion-item ng-repeat="store in stores" href="#">
-                <strong>{{store.name}}</strong>
-                <br/>
-                {{ store.address }}
-                <br/>
-                {{ store.tel }}
-            </ion-item>
-        </ion-list>
+
+      <div class="list" data-ng-controller="StoreCtrl">
+
+        <a ng-repeat="store in stores" class="item item-icon-left" href="#/app/menu/{{store.id}}">
+          <i class="icon icon-home"></i>
+
+          <strong>{{store.name}}</strong>
+          <br/>
+          {{ store.address }}
+          <br/>
+          {{ store.tel }}
+        </a>
+
+      </div>
+
     </ion-content>
 </ion-view>
