Gon - Added checkout button

--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -12,4 +12,10 @@
             {{item.desc}}
         </ion-item>
     </ion-list>
+
+    <button class="button button-block button-positive"
+            data-ng-if="cart.length > 0"
+            data-ng-click="checkout()">
+      CHECKOUT
+    </button>
 </ion-content>
