Adding confo page

--- a/app/templates/delivery-contact.html
+++ b/app/templates/delivery-contact.html
@@ -35,7 +35,7 @@
           </label>
 
         </div>
-        <!-- DELIVERY TO HOME REUIRED DATA-->
+        <!-- DELIVERY TO HOME REQUIRED DATA-->
 
 
         <label class="item item-input">
@@ -43,7 +43,7 @@
         </label>
 
         <button class="button button-block button-positive"
-                data-ng-click="">
+                data-ng-click="placeOrder()">
           PLACE ORDER
         </button>
 
