--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -26,6 +26,11 @@
   <!-- Right menu -->
   <ion-side-menu side="right">
       <cart></cart>
+
+      <br/>
+      <br/>
+      <checkout-button></checkout-button>
+
   </ion-side-menu>
 
 </ion-side-menus>
