Updated layout, moved up - fix checkout  button display

--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -25,12 +25,17 @@
 
   <!-- Right menu -->
   <ion-side-menu side="right">
-      <cart></cart>
 
-      <br/>
-      <br/>
+    <header class="bar bar-header bar-stable">
+      <h1 class="title"></h1>
+    </header>
+
+    <ion-content class="has-header">
+      <cart></cart>
       <checkout-button></checkout-button>
+    </ion-content>
 
   </ion-side-menu>
+  <!-- Right menu -->
 
 </ion-side-menus>
