--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -7,7 +7,9 @@
     </ion-nav-buttons>
     <ion-content class="has-header">
         <div class="list">
-            <pizzas ng-model="menu"></pizzas>
+            <pizzas ng-model="menu.pizza"></pizzas>
+
+            <empanadas ng-model="menu.empanada"></empanadas>
         </div>
     </ion-content>
 </ion-view>
