Added empanadas type/qty selection

--- a/app/templates/empanada-order.html
+++ b/app/templates/empanada-order.html
@@ -8,7 +8,8 @@
             <div class="item item-avatar">
                 <img src="">
                 <h2>Empanada {{empanada.desc}}</h2>
-                <p>{{empanada.type}}</p>
+                <p>Souffle: {{empanada.type.f}}</p>
+                <p>Horno: {{empanada.type.h}}</p>
             </div>
             <div class="item item-body">
                 <p>
