--- a/app/templates/delivery-contact.html
+++ b/app/templates/delivery-contact.html
@@ -44,7 +44,7 @@
 
         <button class="button button-block button-positive"
                 data-ng-click="placeOrder()">
-          PLACE ORDER
+          Enviar Pedido
         </button>
 
 
