--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -17,7 +17,7 @@
           Menu
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/stores">
-          Stores
+          Locales
         </ion-item>
       </ion-list>
     </ion-content>
