fix checkout modal

--- a/app/templates/delivery-contact.html
+++ b/app/templates/delivery-contact.html
@@ -43,7 +43,7 @@
         </label>
 
         <button class="button button-block button-positive"
-                data-ng-click="placeOrder()">
+                data-ng-click="contact.place()">
           Enviar Pedido
         </button>
 
