cancel selection flow, return to menu

--- a/app/templates/empanada-type.html
+++ b/app/templates/empanada-type.html
@@ -44,6 +44,7 @@
       <button class="button button-positive" data-ng-click="type.choose(empanada.f.qty, empanada.h.qty)">
         CONTINUAR
       </button>
+      <cancel-selection></cancel-selection>
 
     </ion-content>
 </div>
