--- a/app/templates/pizza-size.html
+++ b/app/templates/pizza-size.html
@@ -26,5 +26,6 @@
                 <i class="radio-icon ion-checkmark"></i>
             </label>
         </div>
+        <cancel-selection></cancel-selection>
     </ion-content>
 </div>
