--- a/app/templates/pizza-dough.html
+++ b/app/templates/pizza-dough.html
@@ -19,5 +19,6 @@
                 <i class="radio-icon ion-checkmark"></i>
             </label>
         </div>
+        <cancel-selection></cancel-selection>
     </ion-content>
 </div>
