user is able to eliminate and edit at the empanada order confirmation modal

--- a/app/templates/empanada-order.html
+++ b/app/templates/empanada-order.html
@@ -15,8 +15,8 @@
                 <p>
                 <div class="button-bar">
                     <a class="button" ng-click="order.add()">Agregar</a>
-                    <a class="button">Editar</a>
-                    <a class="button">Eliminar</a>
+                    <a class="button" ng-click="order.edit()">Editar</a>
+                    <a class="button" ng-click="order.cancel()">Eliminar</a>
                 </div>
                 </p>
                 <p>
