fixed issue when editing

--- a/app/templates/pizza-size.html
+++ b/app/templates/pizza-size.html
@@ -5,21 +5,21 @@
     <ion-content>
         <div class="list">
             <label class="item item-radio">
-                <input type="radio" value="individual" ng-change="size.choose('individual')" ng-model="pizza.size">
+                <input type="radio" value="individual" ng-click="size.choose('individual')" ng-model="pizza.size">
                 <div class="item-content">
                     Individual
                 </div>
                 <i class="radio-icon ion-checkmark"></i>
             </label>
             <label class="item item-radio">
-                <input type="radio" value="chica" ng-change="size.choose('chica')" ng-model="pizza.size">
+                <input type="radio" value="chica" ng-click="size.choose('chica')" ng-model="pizza.size">
                 <div class="item-content">
                     Chica
                 </div>
                 <i class="radio-icon ion-checkmark"></i>
             </label>
             <label class="item item-radio">
-                <input type="radio" value="grande" ng-change="size.choose('grande')" ng-model="pizza.size">
+                <input type="radio" value="grande" ng-click="size.choose('grande')" ng-model="pizza.size">
                 <div class="item-content">
                     Grande
                 </div>
