Added min value to empanada quantity input

--- a/app/templates/empanada-type.html
+++ b/app/templates/empanada-type.html
@@ -24,7 +24,7 @@
 
           <label class="item item-input">
             <span class="input-label">Cantidad</span>
-            <input type="number" data-ng-model="empanada.type.f" />
+            <input type="number" data-ng-model="empanada.type.f" min="0"/>
           </label>
         </li>
 
@@ -35,7 +35,7 @@
 
           <label class="item item-input">
             <span class="input-label">Cantidad</span>
-            <input type="number" data-ng-model="empanada.type.h" />
+            <input type="number" data-ng-model="empanada.type.h" min="0"/>
           </label>
         </li>
       </ul>
