--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -5,6 +5,27 @@
     </div>
     <ion-list>
         <ion-item nav-clear ng-repeat="item in cart">
-            {{item.desc}}
+
+          {{item.desc}}
+
+          <!-- PIZZAS-------------------->
+          <div data-ng-if="item.size">
+            {{item.size}} - {{item.dough}}
+          </div>
+          <!-- PIZZAS-------------------->
+
+          <!-- EMPANADAS----------------->
+          <div data-ng-if="item.type.f > 0">
+            Frita: {{item.type.f}}
+          </div>
+          <div data-ng-if="item.type.h > 0">
+            Al Horno: {{item.type.h}}
+          </div>
+          <!-- EMPANADAS----------------->
+
+          <pre>
+            {{ item | json }}
+          </pre>
+
         </ion-item>
     </ion-list>
