Added some validation to contact form html

--- a/app/templates/delivery-contact.html
+++ b/app/templates/delivery-contact.html
@@ -8,45 +8,60 @@
 
       <div class="list">
 
-        <label class="item item-input">
-          <input type="text" placeholder="Nombre">
-        </label>
-        <label class="item item-input">
-          <input type="text" placeholder="Telefono">
-        </label>
-
-        <label class="item item-input">
-          <input type="text" placeholder="Email">
-        </label>
-
-        <!-- DELIVERY TO HOME REUIRED DATA-->
-        <div data-ng-if="deliveryOption == 'D'">
+        <form name="contactDetailsForm">
 
           <label class="item item-input">
-            <input type="text" placeholder="Calle">
+            <input type="text" placeholder="Nombre"
+                   data-ng-required="true"
+                   data-ng-maxlength="15">
+          </label>
+          <label class="item item-input">
+            <input type="text" placeholder="Telefono"
+                   data-ng-required="true"
+                   data-ng-maxlength="15">
           </label>
 
           <label class="item item-input">
-            <input type="text" placeholder="Numero">
+            <input type="email" placeholder="Email"
+                   data-ng-required="true"
+                   data-ng-maxlength="30">
           </label>
+
+          <!-- DELIVERY TO HOME REUIRED DATA-->
+          <div data-ng-if="deliveryOption == 'D'">
+
+            <label class="item item-input">
+              <input type="text" placeholder="Calle"
+                     data-ng-required="deliveryOption == 'D'"
+                     data-ng-maxlength="20">
+            </label>
+
+            <label class="item item-input">
+              <input type="number" placeholder="Numero"
+                     data-ng-required="deliveryOption == 'D'"
+                     ng-maxlength="5">
+            </label>
+
+            <label class="item item-input">
+              <input type="text" placeholder="Localidad"
+                     data-ng-required="deliveryOption == 'D'">
+            </label>
+
+          </div>
+          <!-- DELIVERY TO HOME REQUIRED DATA-->
+
 
           <label class="item item-input">
-            <input type="text" placeholder="Localidad">
+            <textarea placeholder="Comments"></textarea>
           </label>
 
-        </div>
-        <!-- DELIVERY TO HOME REQUIRED DATA-->
+          <button class="button button-block button-positive"
+                  data-ng-click="contact.place()"
+                  data-ng-disabled="contactDetailsForm.$invalid">
+            Enviar Pedido
+          </button>
 
-
-        <label class="item item-input">
-          <textarea placeholder="Comments"></textarea>
-        </label>
-
-        <button class="button button-block button-positive"
-                data-ng-click="contact.place()">
-          Enviar Pedido
-        </button>
-
+        </form>
 
       </div>
 
