pizza modal refacted: logic extracted to factories

--- a/app/templates/pizza-order.html
+++ b/app/templates/pizza-order.html
@@ -13,8 +13,8 @@
             <div class="item item-body">
                 <p>
                 <div class="button-bar">
-                    <a class="button" ng-click="order.add()">Agregar</a>
-                    <a class="button" ng-click="order.edit()">Editar</a>
+                    <a class="button" ng-click="order.add(pizza)">Agregar</a>
+                    <a class="button" ng-click="order.edit(pizza)">Editar</a>
                     <a class="button" ng-click="order.cancel()">Eliminar</a>
                 </div>
                 </p>
