pizza full description on cart

--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -9,18 +9,18 @@
           {{item.desc}}
 
           <!-- PIZZAS-------------------->
-          <div data-ng-if="item.size">
-            {{item.size}} - {{item.dough}}
-          </div>
+          <!--<div data-ng-if="item.size">-->
+            <!--{{item.size}} - {{item.dough}}-->
+          <!--</div>-->
           <!-- PIZZAS-------------------->
 
           <!-- EMPANADAS----------------->
-          <div data-ng-if="item.type.f > 0">
-            Frita: {{item.type.f}}
-          </div>
-          <div data-ng-if="item.type.h > 0">
-            Al Horno: {{item.type.h}}
-          </div>
+          <!--<div data-ng-if="item.type.f > 0">-->
+            <!--Frita: {{item.type.f}}-->
+          <!--</div>-->
+          <!--<div data-ng-if="item.type.h > 0">-->
+            <!--Al Horno: {{item.type.h}}-->
+          <!--</div>-->
           <!-- EMPANADAS----------------->
 
           <pre>
