--- a/app/templates/empanada-order.html
+++ b/app/templates/empanada-order.html
@@ -8,8 +8,7 @@
             <div class="item item-avatar">
                 <img src="">
                 <h2>Empanada {{empanada.desc}}</h2>
-                <p>Souffle: {{empanada.type.f}}</p>
-                <p>Horno: {{empanada.type.h}}</p>
+                <p>{{empanada.qty}}</p>
             </div>
             <div class="item item-body">
                 <p>
