--- a/app/templates/empanada-order.html
+++ b/app/templates/empanada-order.html
@@ -8,6 +8,7 @@
             <div class="item item-avatar">
                 <img src="">
                 <h2>Empanada {{empanada.desc}}</h2>
+                <p>{{empanada.type}}</p>
                 <p>{{empanada.qty}}</p>
             </div>
             <div class="item item-body">
