--- a/app/templates/empanada-type.html
+++ b/app/templates/empanada-type.html
@@ -1,6 +1,8 @@
 <div class="modal">
   <ion-header-bar>
-      <h1 class="title">Empanada {{empanada.desc}}</h1>
+      <h1 class="title">
+        Empanada {{empanada.desc}} - {{empanada.type}}
+      </h1>
   </ion-header-bar>
 
   <ion-content>
