--- a/app/templates/menu-pizzas.html
+++ b/app/templates/menu-pizzas.html
@@ -2,7 +2,7 @@
     Pizzas
 </div>
 
-<div class="item item-button-right" ng-repeat="item in menu" href="#/app/menu/{{item.id}}">
+<div class="item item-button-right" ng-repeat="item in menu" >
     <strong>{{item.desc}}</strong>
 
     <br/>
