Refactor to factories Empanada in order to match pizza model

--- a/app/templates/empanada-order.html
+++ b/app/templates/empanada-order.html
@@ -14,8 +14,8 @@
             <div class="item item-body">
                 <p>
                 <div class="button-bar">
-                    <a class="button" ng-click="order.add()">Agregar</a>
-                    <a class="button" ng-click="order.edit()">Editar</a>
+                    <a class="button" ng-click="order.add(empanada)">Agregar</a>
+                    <a class="button" ng-click="order.edit(empanada)">Editar</a>
                     <a class="button" ng-click="order.cancel()">Eliminar</a>
                 </div>
                 </p>
