--- a/app/templates/empanada-type.html
+++ b/app/templates/empanada-type.html
@@ -44,7 +44,7 @@
       </pre>
 
       <button class="button button-positive"
-              data-ng-click="type.choose()">
+              data-ng-click="qty.choose()">
         CONTINUAR
       </button>
 
