--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -6,23 +6,9 @@
     <ion-list>
         <ion-item nav-clear ng-repeat="item in cart">
 
-          {{item.desc}}    </br>
-          {{item.totalPrice | centsToMoney | currency}}
-
-          <!-- PIZZAS-------------------->
-          <!--<div data-ng-if="item.size">-->
-            <!--{{item.size}} - {{item.dough}}-->
-          <!--</div>-->
-          <!-- PIZZAS-------------------->
-
-          <!-- EMPANADAS----------------->
-          <!--<div data-ng-if="item.type.f > 0">-->
-            <!--Frita: {{item.type.f}}-->
-          <!--</div>-->
-          <!--<div data-ng-if="item.type.h > 0">-->
-            <!--Al Horno: {{item.type.h}}-->
-          <!--</div>-->
-          <!-- EMPANADAS----------------->
+          {{item.qty}} x {{item.desc}}
+          </br>
+          {{item.totalPrice * item.qty | centsToMoney | currency}}
 
           <pre>
             {{ item | json }}
