--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -1,34 +1,18 @@
-    <div class="card" ng-if="cart.length == 0">
-        <div class="item item-text-wrap">
-            El carrito esta vacio
-        </div>
+<div class="card" ng-if="cart.length == 0">
+    <div class="item item-text-wrap">
+        El carrito esta vacio
     </div>
-    <ion-list>
-        <ion-item nav-clear ng-repeat="item in cart">
+</div>
+<ion-list>
+    <ion-item nav-clear ng-repeat="item in cart">
 
-          {{item.description()}}    </br>
-          {{item.totalPrice | centsToMoney | currency}}
-
-          <button class="button button-light" ng-click="$parent.edit(item)">Editar</button>
-
-          <!-- PIZZAS-------------------->
-          <!--<div data-ng-if="item.size">-->
-            <!--{{item.size}} - {{item.dough}}-->
-          <!--</div>-->
-          <!-- PIZZAS-------------------->
-
-          <!-- EMPANADAS----------------->
-          <!--<div data-ng-if="item.type.f > 0">-->
-            <!--Frita: {{item.type.f}}-->
-          <!--</div>-->
-          <!--<div data-ng-if="item.type.h > 0">-->
-            <!--Al Horno: {{item.type.h}}-->
-          <!--</div>-->
-          <!-- EMPANADAS----------------->
+        {{item.qty}} x {{item.desc}}
+        </br>
+        {{item.totalPrice * item.qty | centsToMoney | currency}}
 
           <pre>
             {{ item | json }}
           </pre>
 
-        </ion-item>
-    </ion-list>
+    </ion-item>
+</ion-list>
