--- a/app/templates/menu-empanadas.html
+++ b/app/templates/menu-empanadas.html
@@ -9,7 +9,7 @@
     <a class="item" href="#" data-ng-repeat="prod in cat.prod" ng-click="choose(prod, cat.desc)">
       {{ prod.desc }}
       {{ prod.topp }}
-      {{ prod.price }}
+      {{ prod.price | centsToMoney | currency}}
     </a>
 
   </div>
