--- a/app/templates/delivery-contact.html
+++ b/app/templates/delivery-contact.html
@@ -8,43 +8,82 @@
 
       <div class="list">
 
-        <form name="contactDetailsForm">
+        <div class="">
+
+          <div ng-show="contactDetailsForm.name.$error.required">Tell us your name.</div>
+          <div ng-show="contactDetailsForm.name.$error.maxlength">This is not a valid name.</div>
+
+          <div ng-show="contactDetailsForm.tel.$error.required">Tell us your tel.</div>
+          <div ng-show="contactDetailsForm.tel.$error.maxlength">This is not a valid tel.</div>
+
+          <div ng-show="contactDetailsForm.email.$error.required">Tell us your email.</div>
+          <div ng-show="contactDetailsForm.email.$error.maxlength">This is not a valid email.</div>
+
+          <div ng-show="contactDetailsForm.street.$error.required">Tell us your street.</div>
+          <div ng-show="contactDetailsForm.street.$error.maxlength">This is not a valid street.</div>
+
+          <div ng-show="contactDetailsForm.door.$error.required">Tell us your door.</div>
+          <div ng-show="contactDetailsForm.door.$error.maxlength">This is not a valid door.</div>
+
+          <div ng-show="contactDetailsForm.area.$error.required">Tell us your area.</div>
+          <div ng-show="contactDetailsForm.area.$error.maxlength">This is not a valid area.</div>
+
+          <div ng-show="contactDetailsForm.comments.$error.maxlength">This is not a valid comments.</div>
+
+        </div>
+
+
+        <form name="contactDetailsForm" novalidate >
 
           <label class="item item-input">
             <input type="text" placeholder="Nombre"
                    data-ng-required="true"
-                   data-ng-maxlength="15">
+                   data-ng-maxlength="15"
+                   data-ng-model="order.name"
+                   name="name">
           </label>
+
           <label class="item item-input">
-            <input type="text" placeholder="Telefono"
+            <input type="number" placeholder="Telefono"
                    data-ng-required="true"
-                   data-ng-maxlength="15">
+                   data-ng-maxlength="15"
+                   data-ng-model="order.tel"
+                   name="tel">
           </label>
 
           <label class="item item-input">
             <input type="email" placeholder="Email"
                    data-ng-required="true"
-                   data-ng-maxlength="30">
+                   data-ng-maxlength="30"
+                   data-ng-model="order.email"
+                   name="email">
           </label>
 
-          <!-- DELIVERY TO HOME REUIRED DATA-->
+          <!-- DELIVERY TO HOME REQUIRED DATA-->
           <div data-ng-if="deliveryOption == 'D'">
 
             <label class="item item-input">
               <input type="text" placeholder="Calle"
                      data-ng-required="deliveryOption == 'D'"
-                     data-ng-maxlength="20">
+                     data-ng-maxlength="20"
+                     data-ng-model="order.addr.street"
+                     name="street">
             </label>
 
             <label class="item item-input">
               <input type="number" placeholder="Numero"
                      data-ng-required="deliveryOption == 'D'"
-                     ng-maxlength="5">
+                     data-ng-maxlength="5"
+                     data-ng-model="order.addr.door"
+                     name="door">
             </label>
 
             <label class="item item-input">
               <input type="text" placeholder="Localidad"
-                     data-ng-required="deliveryOption == 'D'">
+                     data-ng-required="deliveryOption == 'D'"
+                     data-ng-maxlength="20"
+                     data-ng-model="order.addr.area"
+                     name="area">
             </label>
 
           </div>
@@ -52,7 +91,10 @@
 
 
           <label class="item item-input">
-            <textarea placeholder="Comments"></textarea>
+              <textarea placeholder="Comments"
+                        data-ng-model="order.comments"
+                        data-ng-maxlength="200"
+                        name="comments"></textarea>
           </label>
 
           <button class="button button-block button-positive"
