--- a/app/templates/menu-empanadas.html
+++ b/app/templates/menu-empanadas.html
@@ -4,15 +4,15 @@
 
 <div class="list">
 
-  <div class="item item-divider" ng-repeat-start="cat in menu">
+  <div class="item item-divider" style="background-color: #f8f8ff" ng-repeat-start="cat in menu">
     <strong>{{cat.desc}}</strong>
   </div>
 
   <div ng-repeat-end>
     <a class="item" href="#" data-ng-repeat="prod in cat.prod" ng-click="choose(prod, cat.desc)">
-      {{ prod.desc }}
-      {{ prod.topp }}
-      {{ prod.price | centsToMoney | currency}}
+      <span>{{ prod.desc }}</span>
+      <span>{{ prod.topp }}</span>
+      <span class="text-right">{{ prod.price | centsToMoney | currency}}</span>
     </a>
   </div>
 
