--- a/app/templates/empanada-order.html
+++ b/app/templates/empanada-order.html
@@ -5,26 +5,54 @@
     <ion-content>
 
         <div class="list card">
-            <div class="item item-avatar">
-                <img src="">
-                <h2>Empanada {{empanada.desc}}</h2>
-                <p>{{empanada.type}}</p>
-                <p>{{empanada.qty}}</p>
-            </div>
-            <div class="item item-body">
-                <p>
-                <div class="button-bar">
-                    <a class="button" ng-click="order.add(empanada)">Agregar</a>
-                    <a class="button" ng-click="order.edit(empanada)">Editar</a>
-                    <a class="button" ng-click="order.cancel()">Eliminar</a>
-                </div>
-                </p>
-                <p>
-                    <button class="button button-block button-positive">
-                        Enviar Pedido
-                    </button>
-                </p>
-            </div>
+          <div class="item item-avatar">
+              <img src="">
+              <h2>Empanada {{empanada.desc}}</h2>
+              <p>{{empanada.type}}</p>
+          </div>
+
+
+          <div class="item item-avatar">
+
+            <span>Cantidad</span>
+
+            <button
+                    class="button"
+                    data-ng-disabled="empanada.minReached()"
+                    data-ng-click="empanada.updateQty(-1)"
+                    >
+              <i class="icon ion-minus"></i>
+            </button>
+
+            <button class="button button-clear button-positive" data-ng-disabled="true">
+              {{empanada.qty}}
+            </button>
+
+            <button class="button"
+                    data-ng-disabled="empanada.maxReached()"
+                    data-ng-click="empanada.updateQty(+1)"
+                    >
+              <i class="icon ion-plus-round"></i>
+            </button>
+
+          </div>
+
+
+          <div class="item item-body">
+              <p>
+              <div class="button-bar">
+                  <a class="button" ng-click="order.add(empanada)">Agregar</a>
+                  <a class="button" ng-click="order.edit(empanada)">Editar</a>
+                  <a class="button" ng-click="order.cancel()">Eliminar</a>
+              </div>
+              </p>
+              <p>
+                  <button class="button button-block button-positive">
+                      Enviar Pedido
+                  </button>
+              </p>
+          </div>
+
         </div>
     </ion-content>
 </div>
