--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -1,15 +1,19 @@
-    <div class="card" ng-if="cart.length == 0">
+    <div class="card" ng-if="cart.items.length == 0">
         <div class="item item-text-wrap">
             El carrito esta vacio
         </div>
     </div>
 
     <ion-list>
-        <ion-item nav-clear ng-repeat="item in cart | orderBy:'+cat'">
+        <ion-item nav-clear ng-repeat="item in cart.items | orderBy:'+cat'">
 
           {{item.qty}} x {{item.desc}}
           </br>
           {{item.totalPrice * item.qty | centsToMoney | currency}}
 
         </ion-item>
+
+      <div data-ng-if="cart.price.total > 0">
+           Total: {{ cart.price.total  | centsToMoney | currency }}
+         </div>
     </ion-list>
