--- a/app/templates/menu-empanadas.html
+++ b/app/templates/menu-empanadas.html
@@ -9,9 +9,9 @@
   </div>
 
   <ion-list ng-repeat-end>
-    <ion-item data-ng-repeat="prod in cat.prod" ng-click="choose(prod, cat.desc)">
+    <ion-item data-ng-repeat="prod in cat.products" ng-click="choose(prod, cat.desc)">
         <strong>{{ prod.desc }}</strong>
-        <span>{{ prod.topp }}</span>
+        <span>{{ prod.toppings }}</span>
         <span class="text-right">{{ prod.price | centsToMoney | currency}}</span>
     </ion-item>
   </ion-list>
