Added data- to attributes

--- a/app/scripts/empanadas/templates/empanada-order.html
+++ b/app/scripts/empanadas/templates/empanada-order.html
@@ -41,9 +41,9 @@
           <div class="item item-body">
               <p>
               <div class="button-bar">
-                  <a class="button" ng-click="order.add(empanada)">Agregar</a>
-                  <a class="button" ng-click="order.edit(empanada)">Editar</a>
-                  <a class="button" ng-click="order.cancel()">Eliminar</a>
+                  <a class="button" data-ng-click="order.add(empanada)">Agregar</a>
+                  <a class="button" data-ng-click="order.edit(empanada)">Editar</a>
+                  <a class="button" data-ng-click="order.cancel()">Eliminar</a>
               </div>
               </p>
               <p>
