--- a/app/scripts/cart/templates/cart.html
+++ b/app/scripts/cart/templates/cart.html
@@ -1,20 +1,20 @@
-    <div class="card" ng-if="cart.products.length == 0">
+    <div class="card" data-ng-if="cart.products.length == 0">
         <div class="item item-text-wrap">
             El carrito esta vacio
         </div>
     </div>
 
     <ion-list>
-        <ion-item nav-clear ng-repeat="item in cart.products | orderBy:'+cat'">
+        <ion-item nav-clear data-ng-repeat="item in cart.products | orderBy:'+cat'">
 
           {{item.qty}} x {{item.desc}}
           </br>
           {{item.totalPrice * item.qty | centsToMoney | currency}}
-            <button class="button button-light" ng-click="$parent.edit(item)">Editar</button>
+            <button class="button button-light" data-ng-click="$parent.edit(item)">Editar</button>
 
         </ion-item>
 
-        <div ng-if="cart.products.length > 0">
+        <div data-ng-if="cart.products.length > 0">
            Total: {{ cart.totalPrice()  | centsToMoney | currency }}
         </div>
 
