--- a/app/scripts/pizzas/templates/pizza-order.html
+++ b/app/scripts/pizzas/templates/pizza-order.html
@@ -13,9 +13,9 @@
             <div class="item item-body">
                 <p>
                 <div class="button-bar">
-                    <a class="button" ng-click="order.add(pizza)">Agregar</a>
-                    <a class="button" ng-click="order.edit(pizza)">Editar</a>
-                    <a class="button" ng-click="order.cancel()">Eliminar</a>
+                    <a class="button" data-ng-click="order.add(pizza)">Agregar</a>
+                    <a class="button" data-ng-click="order.edit(pizza)">Editar</a>
+                    <a class="button" data-ng-click="order.cancel()">Eliminar</a>
                 </div>
                 </p>
                 <p>
