--- a/app/templates/delivery-contact.html
+++ b/app/templates/delivery-contact.html
@@ -10,25 +10,25 @@
 
         <div class="">
 
-          <div ng-show="contactDetailsForm.name.$error.required">Tell us your name.</div>
-          <div ng-show="contactDetailsForm.name.$error.maxlength">This is not a valid name.</div>
+          <div data-ng-show="contactDetailsForm.name.$error.required">Tell us your name.</div>
+          <div data-ng-show="contactDetailsForm.name.$error.maxlength">This is not a valid name.</div>
 
-          <div ng-show="contactDetailsForm.tel.$error.required">Tell us your tel.</div>
-          <div ng-show="contactDetailsForm.tel.$error.maxlength">This is not a valid tel.</div>
+          <div data-ng-show="contactDetailsForm.tel.$error.required">Tell us your tel.</div>
+          <div data-ng-show="contactDetailsForm.tel.$error.maxlength">This is not a valid tel.</div>
 
-          <div ng-show="contactDetailsForm.email.$error.required">Tell us your email.</div>
-          <div ng-show="contactDetailsForm.email.$error.maxlength">This is not a valid email.</div>
+          <div data-ng-show="contactDetailsForm.email.$error.required">Tell us your email.</div>
+          <div data-ng-show="contactDetailsForm.email.$error.maxlength">This is not a valid email.</div>
 
-          <div ng-show="contactDetailsForm.street.$error.required">Tell us your street.</div>
-          <div ng-show="contactDetailsForm.street.$error.maxlength">This is not a valid street.</div>
+          <div data-ng-show="contactDetailsForm.street.$error.required">Tell us your street.</div>
+          <div data-ng-show="contactDetailsForm.street.$error.maxlength">This is not a valid street.</div>
 
-          <div ng-show="contactDetailsForm.door.$error.required">Tell us your door.</div>
-          <div ng-show="contactDetailsForm.door.$error.maxlength">This is not a valid door.</div>
+          <div data-ng-show="contactDetailsForm.door.$error.required">Tell us your door.</div>
+          <div data-ng-show="contactDetailsForm.door.$error.maxlength">This is not a valid door.</div>
 
-          <div ng-show="contactDetailsForm.area.$error.required">Tell us your area.</div>
-          <div ng-show="contactDetailsForm.area.$error.maxlength">This is not a valid area.</div>
+          <div data-ng-show="contactDetailsForm.area.$error.required">Tell us your area.</div>
+          <div data-ng-show="contactDetailsForm.area.$error.maxlength">This is not a valid area.</div>
 
-          <div ng-show="contactDetailsForm.comments.$error.maxlength">This is not a valid comments.</div>
+          <div data-ng-show="contactDetailsForm.comments.$error.maxlength">This is not a valid comments.</div>
 
         </div>
 
