--- a/app/templates/stores.html
+++ b/app/templates/stores.html
@@ -8,7 +8,7 @@
 
       <div class="list" data-ng-controller="StoreCtrl">
 
-        <a ng-repeat="store in stores" class="item item-icon-left" href="#/app/menu/{{store.id}}">
+        <a data-ng-repeat="store in stores" class="item item-icon-left" href="#/app/menu/{{store.id}}">
           <i class="icon icon-home"></i>
 
           <strong>{{store.name}}</strong>
