refactor: manager pizza objects instead of literals

--- a/app/scripts/pizzas/templates/menu-pizzas.html
+++ b/app/scripts/pizzas/templates/menu-pizzas.html
@@ -4,7 +4,8 @@
 
 <div class="list">
 
-  <div class="item item-divider" style="background-color: #f8f8ff" data-ng-repeat-start="cat in menu">
+  <div class="item item-divider" style="background-color: #f8f8ff"
+       data-ng-repeat-start="cat in menu">
     <strong>{{cat.desc}}</strong>
   </div>
 
