--- a/app/scripts/pizzas/templates/pizza-order.html
+++ b/app/scripts/pizzas/templates/pizza-order.html
@@ -7,6 +7,7 @@
         <div class="list card">
             <div class="item item-avatar">
                 <img src="">
+                <pre>{{pizza | json}}</pre>
                 <h2>Pizza {{pizza.desc}}</h2>
                 <p>{{pizza.size}} {{pizza.dough}}</p>
             </div>
